[tool.poetry]
name = "keylimiter"
version = "0.1.4"
description = "popular rate limiter algorithms wrote in python"
authors = ["Gabriel F Cipriano <gabrielfcipriano@gmail.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
